Fix Bug# 58459 - assert slot->in_use == FALSE while starting purge thread.

Fix a race condition in srv_master_thread(). We need to acquire the kernel
mutex before calling srv_table_reserve_slot(). Add a mutex_own() assertion
in srv_table_reserve_slot().